<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/parent_layout"
    android:weightSum="80"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="14"
        android:id="@+id/status_TV"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:id="@+id/refreshTV"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/sett"
        android:layout_marginTop="5dp"
        android:onClick="doSettings"
        android:id="@+id/btn1"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/sendCurrent"
        android:id="@+id/btn4"
        android:layout_marginTop="5dp"
        android:onClick="sendCurrent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/sendLastStored"
        android:id="@+id/btn2"
        android:layout_marginTop="5dp"
        android:onClick="sendLastStored"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/storeCurrent"
        android:id="@+id/btn5"
        android:layout_marginTop="5dp"
        android:onClick="storeCurrent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/lastStored"
        android:id="@+id/last_storedTV"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/rot"
        android:id="@+id/tv"
        android:textColor="@android:color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp" />


    </LinearLayout>
